[package]
name = "virtual-trading"
version.workspace = true
description.workspace = true
authors.workspace = true
edition.workspace = true

[dependencies]
star-river-core = { path = "../star-river-core" }
event-center = {path = "../event-center" }
chrono.workspace = true
tracing.workspace = true
tokio.workspace = true
snafu.workspace = true