[package]
name = "virtual-trading"
version.workspace = true
description.workspace = true
authors.workspace = true
edition.workspace = true

[dependencies]
star-river-core = { path = "../star-river-core" }
event-center-core = { path = "../event-center-core" }
chrono.workspace = true
tracing.workspace = true
tokio.workspace = true
snafu.workspace = true
serde = { workspace = true }
serde_json = { workspace = true }
utoipa.workspace = true
strum.workspace = true