[package]
name = "migration"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
name = "migration"
path = "src/lib.rs"

[dependencies]
tokio.workspace = true
entity = { path = "../entity" }
chrono.workspace = true
serde_json.workspace = true


[dependencies.sea-orm-migration]
version = "1.1.14"
features = ["sqlx-sqlite","runtime-tokio","with-chrono"]
