[package]
name = "star-river-core"
version.workspace = true
description.workspace = true
authors.workspace = true
edition.workspace = true

[dependencies]

ta-lib = { path = "../ta-lib" }
entity = { path = "../entity" }
serde.workspace = true
strum.workspace = true
strum_macros.workspace = true
serde_json.workspace = true
typetag = {version = "0.2.20"}
async-trait.workspace = true
tokio.workspace = true
uuid.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tokio-stream.workspace = true
futures.workspace = true
chrono.workspace = true
chrono-tz.workspace = true
deepsize.workspace = true
utoipa.workspace = true
ordered-float.workspace = true
rust_decimal.workspace = true
paste.workspace = true
reqwest.workspace = true
tokio-tungstenite.workspace = true
sea-orm.workspace = true
snafu.workspace = true

petgraph.workspace = true
once_cell.workspace = true
axum.workspace = true