[package]
name = "strategy-core"
version.workspace = true
description.workspace = true
authors.workspace = true
edition.workspace = true

[dependencies]
event-center-core = { path = "../event-center-core" }
star-river-core = { path = "../star-river-core" }
strategy-stats = { path = "../../strategy-stats" }
heartbeat = { path = "../heartbeat" }
entity = { path = "../entity" }
ta-lib = { path = "../ta-lib" }
tokio.workspace = true
tokio-util.workspace = true
async-trait.workspace = true
tracing.workspace = true
snafu.workspace = true
serde.workspace = true
serde_json.workspace = true
strum.workspace = true
strum_macros.workspace = true
futures.workspace = true
futures-util.workspace = true
tokio-stream.workspace = true
chrono.workspace = true
utoipa.workspace = true
rust_decimal.workspace = true
once_cell.workspace = true
ordered-float.workspace = true
petgraph.workspace = true
sea-orm.workspace = true
derive_more.workspace = true

[lints]
workspace = true
